--- a/online-store/src/styles.css
+++ b/online-store/src/styles.css
@@ -458,6 +458,19 @@ body {
     display: none;
 }
 
+.navbar-logo {
+    height: 20px;    
+    margin-right: 7px;
+    vertical-align: middle;
+  }
+  
+  .logo-link {
+    display: flex;
+    align-items: center;
+    text-decoration: none;
+    color: inherit;
+  }
+
 /* Tablet+ */
 @media (min-width: 769px) {
     .hamburger {
